--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>{{title}}</h1>
+<header>
+  <h1>{{title}}</h1>
+</header>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer></footer>
